--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "private": true,
     "author": "Itai Koren (@itkoren)",
     "license": "MIT",
+    "scripts": {
+        "start": "node ./app.js"
+    },
     "engines": {
         "node": ">= 0.10.x"
     }
