--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-    "name": "lightning-nodejs-containers",
-    "version": "0.0.1",
-    "description": "An Overview of NodeJS as a lightweight container - A session I gave to Technical Leaders @LivePerson",
-    "private": true,
-    "author": "Itai Koren (@itkoren)",
-    "license": "MIT",
-    "engines": {
-        "node": ">= 0.10.x"
-    }
+  "name": "step2",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0"
+  }
 }
