--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "step2",
+  "name": "step3",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "ws": "^1.1.1"
   }
 }
